# qfeh

./: CMakeLists.txt  HistogramWindow.qml  README.md  assets.qrc  imagehistogrammodel.cpp  imagehistogrammodel.h  localdiriterator.cpp  localdiriterator.h  main.cpp  main.qml  qml.qrc
qml/: HistogramCanvas.qml  HistogramWindow.qml  main.qml
src/: imagehistogrammodel.cpp  imagehistogrammodel.h  localdiriterator.cpp  localdiriterator.h
